# aimbot

./: .gitignore
devel/: setup.sh
devel/include/aimbot/: BallState.h  PIDInfo.h  RobotState.h
devel/include/mcthuggets/: BallState.h  PIDInfo.h  RobotState.h
devel/include/soccerref/: GameState.h
devel/include/test/: BallState.h  PIDInfo.h  RobotState.h
devel/lib/aimbot/: aimbot_vision_sim  controller
devel/lib/demoteam/: controller
devel/lib/pkgconfig/: aimbot.pc  demoteam.pc  mcthuggets.pc  soccerref.pc  soccersim.pc  teamname.pc  teamparker.pc  test.pc
devel/lib/soccersim/: vision_sim
devel/share/aimbot/cmake/: aimbot-msg-extras.cmake  aimbot-msg-paths.cmake  aimbotConfig.cmake
devel/share/demoteam/cmake/: demoteamConfig.cmake
devel/share/mcthuggets/cmake/: mcthuggets-msg-paths.cmake  mcthuggetsConfig.cmake
devel/share/soccerref/cmake/: soccerref-msg-extras.cmake  soccerref-msg-paths.cmake  soccerrefConfig.cmake
devel/share/soccersim/cmake/: soccersimConfig.cmake
devel/share/teamname/cmake/: teamnameConfig.cmake
devel/share/teamparker/cmake/: teamparkerConfig.cmake
devel/share/test/cmake/: test-msg-extras.cmake  test-msg-paths.cmake  testConfig.cmake
src/: .gitignore
src/aimbot/: CMakeLists.txt  README.md  package.xml  setup.py
src/aimbot/game/: Game.py  Robot.py  Team.py  setup.py
src/aimbot/launch/: aimbot.launch  central.launch  centralfromvision.launch  comp.launch  game.launch  robot (old).launch  robot.launch  team.launch  test.launch  vision.launch
src/aimbot/launch/New Launch Files/: central.launch  game.launch  team.launch
src/aimbot/launch/Old Launch Files/: comp.launch  robot(old).launch
src/aimbot/nodes/ai/: AI.py  Position.py  ai_node.py
src/aimbot/nodes/controller/: controller_node (0.01).py  controller_node.py
src/aimbot/nodes/vision/: Position.py  vision_node (0.3).py  vision_node(0.1).py  vision_node.py
src/aimbot/old scripts/: Controller.py  ai_node.py  controller_node_test.py  motor_node.py  setup.py  vision_node.py
src/aimbot/scripts/: AI.py  Controller.py  ControllerClass.py  Game.py  GameStateObj.py  MotorController.py  Moving.py  NewController.py  Observer.py  PID.py  PathPlanner.py  Position.py  Robot.py  Team.py  ai_node.py  constants.py  controller_node.py  game_node.py  gpio.py  motor_node.py  robot_node.py  roles.py  rotary_encoder.py  team_node.py  test.py  test_pathplanner.py  vision_node.py
src/aimbot/src/: OpenCVSliders.cpp  OpenCVSliders.h  addnewdialog.cpp  addnewdialog.h  ballvision.cpp  ballvision.h  ballvisiontab.cpp  ballvisiontab.h  camera_node.cpp  camlistener.cpp  camlistener.h  dialog.ui  global.cpp  global.h  gui_node.cpp  maintab.cpp  maintab.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvsliders.cpp  opencvsliders.h  prefilter.cpp  prefilter.h  raw_vision_node.cpp  robotvision.cpp  robotvision.h  robotvisiontab.cpp  robotvisiontab.h  roshandler.cpp  roshandler.h  settings.cpp  settings.h  shellexecute.cpp  shellexecute.h  vision(old).cpp  vision.cpp  vision.h  visiontab.cpp  visiontab.h
src/aimbot/src/VisionGui/: VisionGui.pro  cvimagewidget.h  main.cpp
src/aimbot/src/build-VisionGui-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  moc_cvimagewidget.cpp  moc_mainwindow.cpp
src/demoteam/: CMakeLists.txt  README.md
src/demoteam/launch/: demoteam.launch
src/demoteam/src/: controller.cpp
src/mcthuggets/: CMakeLists.txt  README.md
src/mcthuggets/launch/: README.md  ally1.launch  ally2.launch  mcthuggets.launch  robot.launch
src/mcthuggets/param/: fry.yaml  nugget.yaml
src/soccerref/: CMakeLists.txt  README.md  package.xml
src/soccerref/launch/: referee.launch  simref.launch
src/soccerref/msg/: GameState.msg
src/soccerref/nodes/referee/: Referee.py  referee_node.py  window.ui
src/soccersim/: .gitignore  CMakeLists.txt  README.md  package.xml
src/soccersim/launch/: ball.launch  robot.launch  sim.launch  soccer.launch
src/soccersim/models/: field.xacro
src/soccersim/plugins/: soccer_ball.cpp  soccer_drive.cpp
src/soccersim/src/: vision.cpp
src/soccersim/urdf/: ball.xacro  robot.xacro  wheel.xacro
src/soccersim/worlds/: soccer_field.world  soccer_field.world.xacro
(+77 files in other folders)
