<?xml version="1.0"?>
<package>
  <name>soccerref</name>
  <version>0.0.0</version>
  <description>The soccer referee package</description>

  <maintainer email="jacob.white@byu.net">Jacob White</maintainer>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/embeddedprogrammer/soccerref</url>

  <author email="jacob.white@byu.net">Jacob White</author>
  <author email="parkerclusk@gmail.com">Parker Lusk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>